2012-09-13 Santiago Munín <burning1@gmail.com>
	* src/pandroid_event_viewer/pandorafms/EventList.java: Now, if an element is validated, his color changes to green.
	* src/pandroid_event_viewer/pandorafms/PopupValidationEvent.java: Now it returns a result (validated or not) which will be processed for the activity which called it. 
	* res/values/colors.xml: Added colors to values instead of hardcoding them.

2012-09-13  Miguel de Dios  <miguel.dedios@artica.es>
	
	* res/drawable-ldpi/criticity_0.png,
	res/drawable-ldpi/criticity_1.png,
	res/drawable-ldpi/criticity_2.png,res/drawable-ldpi/criticity_3.png,
	res/drawable-ldpi/criticity_4.png,
	res/drawable-ldpi/criticity_default.png,
	res/drawable-ldpi/pandorafms_logo.png: update the images thanks a
	Carla Andres.
	
	* res/layout/info.xml: fixed the layout to show the app icon.

2012-09-08 Santiago Munín <burning1@gmail.com>
	* res/values/strings.xml: Fixed some entries.

2012-08-25 Santiago Munín <burning1@gmail.com>
	* src/pandroid_event_viewer/pandorafms/Main.java: Bug with api version detect solved.
	* src/pandroid_event_viewer/pandorafms/EventList.java: Comments are cut when they're too long.

2012-08-24 Santiago Munín <burning1@gmail.com>
	* src/pandroid_event_viewer/pandorafms/Core.java: Fixed a bug (possible null argument as image).
	* src/pandroid_event_viewer/pandorafms/EventList.java: Create incident is displayed as a dialog
	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java: FIXME comment removed.
	* src/pandroid_event_viewer/pandorafms/CreateIncidentActivity.java: No longer needed. Removed.

2012-08-24 Santiago Munín <burning1@gmail.com>
	* src/pandroid_event_viewer/pandorafms/Options.java: Fixed a little bug with the connection status textview.
	* res/layout/options.xml: Connection status textview now has a fixed width.
	* res/values/strings.xml: Added an entry.
	* res/values-es/strings.xml: Added an entry.

2012-08-10 Santiago Munín <burning1@gmail.com>