@@ -1,3 +1,8 @@
+2012-09-13  Miguel de Dios  <miguel.dedios@artica.es>
+	
+	* res/values-ja/strings.xml, res/values/strings.xml,
+	res/values-es/strings.xml: fixed the untranslate strings.
+
 2012-09-13 Santiago Munín <burning1@gmail.com>
 	* src/pandroid_event_viewer/pandorafms/EventList.java: Now, if an element is validated, his color changes to green.
 	* src/pandroid_event_viewer/pandorafms/PopupValidationEvent.java: Now it returns a result (validated or not) which will be processed for the activity which called it. 
